tests/error/linear_errors/field_copy_nested1.err
Error: Copy violation (at $FILE:21:11)
   | 
19 |     measure(s.q)
20 |     s.q = s.x.q
21 |     return s
   |            ^ Field `s.x.q` with non-copyable type `qubit` cannot be
   |              returned ...
   | 
20 |     s.q = s.x.q
   |           ----- since it was already moved here

Guppy compilation failed due to 1 previous error
